Update action script.

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -8,7 +8,7 @@ jobs:
         run: |
           svn checkout https://svn.code.sf.net/p/ro-oslib/code/trunk/\!OSLib/Tools oslib-tools
           make -C oslib-tools/BindHelp
-          ./os lib-tools/BindHelp/bindhelp
+          ./oslib-tools/BindHelp/bindhelp
       - name: Check out repository code
         uses: actions/checkout@v2
         with:
