--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Build the manual collections
+      - name: Build the manual manuals
         run: make collections
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
