--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,7 +1,7 @@
-name: GitHub Actions Demo
+name: Build Manuals
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Build-Manuals:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -13,10 +13,9 @@ jobs:
           svn checkout https://svn.code.sf.net/p/ro-oslib/code/trunk/\!OSLib/Tools oslib-tools
           make -C oslib-tools/BindHelp
       - name: Build the manuals
-        run: make manuals
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+        run: make release
+      - name: Save the manuals
+        uses: actions/upload-artifact@v2
+        with:
+          name: stronghelp-manuals
+          path: out/
